--- a/app/assets/stylesheets/static-pages.css.scss
+++ b/app/assets/stylesheets/static-pages.css.scss
@@ -12,3 +12,9 @@
     padding-bottom: 20px;
   }
 }
+
+@media (max-width: $screen-md) {
+  .content.static-pages {
+    padding-top: 0px;
+  }
+}
